<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootStatsLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    tools:context=".view.SessionHistoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/history_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/title_history"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/screen_padding_horizontal"
        android:layout_marginTop="@dimen/spacing_lg"
        app:chipSpacingHorizontal="@dimen/chip_spacing"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/history_toolbar"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterToday"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:textColor="@color/white"
            android:text="@string/history_filter_today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterWeek"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/history_filter_week" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFilterAll"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/history_filter_all" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tvResultCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/screen_padding_horizontal"
        android:textColor="@color/white"
        android:alpha="0.8"
        android:textSize="@dimen/quote_text_size"
        app:layout_constraintBottom_toBottomOf="@id/chipGroupFilter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/chipGroupFilter"
        tools:text="12 sesiones" />

    <View
        android:id="@+id/dividerFilter"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/spacing_md"
        android:background="@color/color_border"
        android:alpha="0.3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chipGroupFilter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_xs"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_xl"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerFilter"
        tools:listitem="@layout/history_session_entry" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutEmpty"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dividerFilter">

        <TextView
            android:id="@+id/tvEmptyIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_empty_icon"
            android:textSize="80sp"
            app:layout_constraintBottom_toTopOf="@id/tvEmptyTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvEmptyTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:layout_marginTop="@dimen/spacing_lg"
            android:layout_marginEnd="@dimen/spacing_xl"
            android:gravity="center"
            android:text="@string/history_empty_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tvEmptySubtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmptyIcon" />

        <TextView
            android:id="@+id/tvEmptySubtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_xl"
            android:layout_marginTop="@dimen/spacing_sm"
            android:layout_marginEnd="@dimen/spacing_xl"
            android:gravity="center"
            android:text="@string/history_empty_desc"
            android:textColor="@color/color_secondary"
            android:alpha="0.7"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmptyTitle" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>